fix tag contrast in light theme

--- a/_sass/hima/colorschemes/_gruvbox-light-theme.scss
+++ b/_sass/hima/colorschemes/_gruvbox-light-theme.scss
@@ -33,7 +33,7 @@ $white: #faf6e8;
   --hima-table-header-bottom-border: #{$white1};
   --hima-table-row-border: #{$white1};
 
-  --hima-tag-foreground: #{$aqua-dark};
+  --hima-tag-foreground: #{darken($purple-dark, 8%)};
   --hima-tag-background: #{$white0s};
   --hima-tag-background-hover: #{darken($white0s, 8%)};
   --hima-tag-prefix-color: #{$black2};
